shady-KISS-skin History
-------------------------------------------
2015-07-09:
- Added setup for long elapsedbars

2015-07-08:
- Added fritzbox-plugin-section to displaymenudefault (patch provided by beinhart@vdrportal)
- Reorganized timers, lastrecs and infos in mainmenu

2015-07-07:
- Small fixes

2015-07-06:
- Fixed condition for markers in menurecordings
- Reorganized markers for recordings
- Removed cutted-symbol for recordings-folders
- Added time-tag
- Fixed typo

2015-07-05:
- Added channelname if no channelogo exists in schedules-list

2015-07-04:
- New displayreplay and displaychannel
- Removed test- and debug-code
- Added posterbackgrounds
- Fixed bug in displayreplay
- Added setup for shift- and fade-times
- Some improvements for tvguideng-view

2015-07-02:
- Some more stuff for new design

2015-06-15:
- New layout for VDR-lists !WIP!

2015-04-12:
- Reworked setup
- Added blink for REC-text in displaychannel
- Small changes of messages
- Added three last recordings to showTimersRecordingsandInfos-option in main menu

2015-04-12:
- Fixed conditions for shorttext in displaymenuschedules
- Fixed displaymenusetup
- Added dedicated columnhandling to systeminfo, fritzbox and setup in displaymenudefault

2015-04-10:
- Added recchannelname in displaymenudetailrecordings
- Lightened textcolor
- Removed useless bracket in weatherforecastdetailcurrent
- New shadowbackgound for weatherforecastdetailcurrent
- Removed {visibility} in weatherforecastcurrent
- Some improvements for favorites in displaymenuschedules

2015-04-09:
- Increased fontsize of current and nexttitle in displaychannel if subtitles are empty
- Fixed nonsense in displaymenurecordings 

2015-04-08:
- Reworked messagesbars
- Fixed area of setupiconbar

2015-04-07:
- Fixed fontsize of {numrecordingsfolder} > 99

2015-04-06:
- Fixed areas in weatherforecast

2015-04-05:
- Added setupparameter "Show timers and infos in mainmenu"
- Added third option for active menubars (gradient)