@@ -121,7 +121,7 @@
 		<area x="93%" y="86%" width="6%" height="5%" layer="3">
 			<drawtext y="12%" align="right" font="{light}" fontsize="75%" color="{clrLightGray}" text="{rectotal}" />
 		</area>
-		<area condition="{timeshift}" x="82%" y="86%" width="11%" height="5%" layer="4">
+		<area condition="{timeshift}++{showTimeshiftTotal}" x="82%" y="86%" width="11%" height="5%" layer="4">
 			<drawtext align="right" valign="center" font="{light}" fontsize="60%" color="{clrWhite}" text="total: {timeshifttotal}h" />
 		</area>
 	</totaltime>
