@@ -2,6 +2,8 @@ shady-KISS-skin History
 -------------------------------------------
 2015-07-09:
 - Added setup for long elapsedbars
+- Added bar for livebuffer in displaychannel
+- Added setup for timeshifttotal in displayreplay
 
 2015-07-08:
 - Added fritzbox-plugin-section to displaymenudefault (patch provided by beinhart@vdrportal)
